# clasp

./: .gitignore  README.md  params_configs.md  pyproject.toml  todo.md
docs/: OPTIMIZATION.md  PROCESSING_PIPELINE.md  WHITEPAPER.md
notebooks/: 00_1_optimize_all_datasets.ipynb  00_download_datasets.ipynb  01_integrated_pipeline.ipynb  01_latent_bayesopt.ipynb  01_optimize_all_datasets.ipynb  01_visualize_embedding.ipynb  02_evaluate_embedding.ipynb  02_latent_bayesopt.ipynb  02_visualize_embedding.ipynb  03_assignment_quantile_sweep.ipynb  03_evaluate_embedding.ipynb  03_visualize_embedding.ipynb  04_assignment_quantile_sweep.ipynb  04_evaluate_embedding.ipynb  04_latent_bayesopt.ipynb  05_assignment_quantile_sweep.ipynb  05_integrated_pipeline.ipynb  06_integrated_pipeline.ipynb  sitecustomize.py
src/clasp/: __init__.py  estimator.py  notebook_utils.py  presets.py
src/clasp/cli/: __init__.py  main.py
src/clasp/datasets/: cellrank_bone_marrow.yaml  cellrank_lung.yaml  cellrank_pancreas.yaml  cellrank_reprogramming_morris.yaml  cellrank_reprogramming_schiebinger.yaml  pancreas.yaml  pbmc3k.yaml  scib_immune_human.yaml  scib_immune_human_mouse.yaml  scib_lung_atlas.yaml  scib_pancreas.yaml  zebrafish.yaml
src/clasp/embedding/: __init__.py
src/clasp/graph/: __init__.py  integrate.py  inter.py  (+2 more)
src/scalp_lite/: __init__.py  estimator.py  notebook_utils.py
tests/: conftest.py  test_cli.py  test_embedding.py  test_estimator.py  test_graph.py  test_latent_bo.py  test_metrics.py  test_notebook_utils.py  test_plotting.py  test_preprocessing.py  test_schema.py
(+41 files in other folders)
