[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalp-lite"
version = "0.1.0"
description = "Minimal SCALP-style single-cell graph integration for AnnData."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<2.0",
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "anndata>=0.9",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "jupyter>=1.0",
]

[project.optional-dependencies]
umap = ["umap-learn>=0.5"]
dev = ["pytest>=7", "nbformat>=5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
